# DENN-LITE

./: .gitattributes  .gitignore  ActiveFunction.h  CMakeLists.txt  Config.h  Constants.h  CostFunction.h  DENN  DENN.rc  DENN.sln  DENN.vcxproj  DENN.vcxproj.filters  DatasetLoader.h  Denn.h  DennActiveFunction.h  DennActiveFunctionFactory.cpp  DennActiveFunctionItems.cpp  DennAlgoritem.h  DennAlgorithm.cpp  DennAlgorithm.h  DennConstants.h  DennCostFunction.h  DennCrossover.h  DennCrossoverFactory.cpp  DennCrossoverItems.cpp  DennDataSet.h  DennDatasetLoader.h  DennEvolutionMethod.h  DennEvolutionMethodFactory.cpp  DennEvolutionMethodItems.cpp  DennFilesystem.cpp  DennIndividual.cpp  DennIndividual.h  DennLayer.h  DennMutation.h  DennMutationCrossOver.h  DennMutationFactory.cpp  DennMutationItems.cpp  DennNeuralNetwork.cpp  DennNeuralNetwork.h  (+51 more)
DENN.xcodeproj/: project.pbxproj
dashboard/: .gitignore  Pipfile  app.py  init_db.py  requirements.txt  run_server.bat  run_server.sh
docs/: .gitignore  404.html  Pipfile  README.md  index.html  make_doc.sh  mkdocs.yml  requirements.txt  sitemap.xml
include/: Config.h  Denn.h  DennActivationFunction.h  DennActiveFunction.h  DennAlgorithm.h  DennArguments.h  DennConv2DLayer.h  DennConvolutional.h  DennCostFunction.h  DennCrossover.h  DennDataset.h  DennDatasetLoader.h  DennDump.h  DennEvaluation.h  DennEvolutionMethod.h  DennFilesystem.h  DennFullyConnected.h  DennGate.h  DennIOFileWrapper.h  DennIndividual.h  DennInstance.h  DennInstanceUtils.h  DennJson.h  DennLSTMLayer.h  DennLayer.h  DennMainUtils.h  DennMutation.h  DennNRam.h  DennNRamDataSetTask.h  DennNRamDatasetTask.h  DennNRamEnhanced.h  DennNRamGate.h  DennNRamTask.h  DennNeuralNetwork.h  DennOptimizer.h  DennParameterInfo.h  DennParameters.h  DennPerceptronLayer.h  DennPointFunction.h  DennPoolLayer.h  (+17 more)
job_manager/: creator.py  creator_JULY.py  creator_SEPTEMBER.py  manager.py  results_to_csv.py
jobs/: job.csv  job_JULY.csv  job_SEPTEMBER.csv  job_bench.csv  job_test_speed.csv
results/: logs_10x1250_mnist100_softmax_logit.json  logs_145x110_mnist4000_softmax_logit.json  logs_250x40_iris105_softmax_14-30_05-06-2017.out  logs_3x1000_mnist4000.out  logs_3x1000_mnist4000_softmax_12-45_04-06-2017.out  logs_6x1000_mnist4000.out  logs_6x1000_mnist4000_softmax_logit.json  logs_75x100_mnist4000_softmax_logit.json  logs_7x1000_mnist4000_softmax_13-51_04-06-2017.out  logs_7x1000_mnist4000_softmax_logit_00-52_05-06-2017.out  logs_7x1000_mnist4000_softmax_logit_22-15_04-06-2017.out  logs_85x100_mnist4000_softmax_logit.json  logs_8x1000_mnist4000_softmax_logit.json
scripts/: gen_lib_caffe2.sh  gen_sqlite_lib.bat  gen_sqlite_lib.ps1
source/: DennActivationFunctionFactory.cpp  DennActivationFunctionItems.cpp  DennActiveFunctionFactory.cpp  DennActiveFunctionItems.cpp  DennAlgorithm.cpp  DennArguments.cpp  DennConv2DLayer.cpp  DennConvolutional.cpp  DennCrossoverFactory.cpp  DennDataset.cpp  DennDump.cpp  DennEvaluationFactory.cpp  DennEvolutionMethodFactory.cpp  DennEvolutionMethodItems.cpp  DennFilesystem.cpp  DennFullyConnected.cpp  DennIndividual.cpp  DennInstance.cpp  DennInstanceUtils.cpp  DennJson.cpp  DennLSTMLayer.cpp  DennLayer.cpp  DennMainUtils.cpp  DennMutationFactory.cpp  DennMutationItems.cpp  DennNRam.cpp  DennNRamDataSetTask.cpp  DennNRamEnhanced.cpp  DennNRamEnhancedEval.cpp  DennNRamEval.cpp  DennNRamGate.cpp  DennNRamTask.cpp  DennNRamTaskItems.cpp  DennNeuralNetwork.cpp  DennParameterInfo.cpp  DennParameters.cpp  DennParametersArgs.cpp  DennParametersConfig.cpp  DennParametersJson.cpp  DennPerceptronLayer.cpp  (+14 more)
template/: BP_MNIST.config  Backpropagation.config  JADE.config  JADE_MNIST.config  JADE_NBIT.config  MAB-ShaDE.config  SaMDE.config  ShaDE.config  ShaDE_2.config  ShaDE_MNIST.config  ShaDE_RL.config
tests/: plot_out_2D.py  (+5 more)
(+141 files in other folders)
